white space error resolved

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -88,6 +88,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: #050017 !important;
 }
 
 /* how it works section animation */
